﻿History
-------

ASAP 3.1.2 (2012-??-??)::
- Created VLC plugin (SAP format only).
- Audacious plugin updated to Audacious 3.2 and compiled for Windows.
- Winamp plugin opens ATR disk images and plays files inside them.
- UTF-8 encoding is supported for STIL.
- New TortoiseSVN and TortoiseGit plugins show changes in SAP tags.
- BASS add-on updated to be compatible with AIMP 3 (SAP format only).
- Enabled title/author/year in the BASS add-on (only selected BASS-based players use it,
for example http://sourceforge.net/projects/encorebassing/[EncoreBassing]).
- Windows Media Player codec supports subsongs, AUTHOR and NAME
(this works at least with Media Player Classic Home Cinema).


ASAP 3.1.1 (2011-10-26)::
- Converted XEX files may optionally display information.
- Fixed conversion of some TYPE D SAP files (e.g. Saturday_Demo.sap) to XEX.
- Fixed time detection for some FC files.


ASAP 3.1.0 (2011-09-24)::

- WASAP/Winamp/Apollo/XMPlay file information window now includes STIL
(SAP Tune Information List) and technical data.
- Added Future Composer (*.fc) format (contributed by Jerzy Kut).
- Written http://asap.sourceforge.net/sap-format.html[specification of the SAP format].
- XMPlay displays STIL, tracker name and RMT instrument names.
- The 64-bit setup package now includes the Windows Media Player plugin
(useful for the Vista/7 http://gallery.live.com/liveItemDetail.aspx?li=3af0c591-260b-4721-b28f-fa0f1d929760[sidebar WMP gadget]).
- Java release now includes `asap.jar` for http://wudsn.com[WUDSN IDE].
- asapplay in the D programming language has been ported to Linux and 64-bit compilers (by Adrian Matoga).


ASAP 3.0.1 (2011-07-15)::

- Uses linear interpolation for resampling (try Toxic_Cream.sap).
- Displays titles of RMT, TMC and TM2 files.
- The GSPlayer plugin now works on new Windows Mobile versions.
- The Android player can play files directly from ZIP archives.
- asapconv can auto-detect the native format (`asapconv -o .%e *.sap`).